# MANA

./: .gitignore  CMakeLists.txt  main.cpp
012_Class/: shape_wrapper.cc
benchmark/: CMakeLists.txt  benchmark.cpp
cmake/: Tools.cmake
ctest/: CMakeLists.txt  ggtest.cpp  main.cpp  sum_integers.cpp  sum_integers.hpp  test.cpp  test.py  test.sh
cuda/01_HelloWorld/: CMakeLists.txt  main.cu
cuda/02_ReduceInteger/: CMakeLists.txt  freshman.h  reduce_integer.cu
fhe/: CMakeLists.txt
fhe/src/: CMakeLists.txt  ciphertext.h  context.h  encryptionparams.h  modulus.h  plaintext.h
fhe/tests/: CMakeLists.txt  ciphertext.cc  context.cc  modulus.cc  plaintext.cc
geek_bang_cpp/: CMakeLists.txt
geek_bang_cpp/011_StackUnwinding/: CMakeLists.txt  stack_unwinding.cc
geek_bang_cpp/012_ShapeWrapper/: CMakeLists.txt  shape_wrapper.cc
geek_bang_cpp/021_SharedPtr/: CMakeLists.txt  shared_ptr.cc
geek_bang_cpp/031_LAndRValue/: CMakeLists.txt  main.cc
geek_bang_cpp/common/: shape.h
memory_pool/: CMakeLists.txt  container_op_test.h  memory_pool.h  pooled_allocator.h  rdtsc.h  test01_normal.cpp  test02_pmr_pool.cpp  test03_class_new_delete.cpp  test04_pooled_allocator.cpp
src/: CMakeLists.txt  hero.cc  hero.h
src/01_HashExample/: CMakeLists.txt  main.cpp
src/stdcout/: CMakeLists.txt  main.cc
src/stdfill/: CMakeLists.txt  main.cc
test/: CMakeLists.txt  arith_tests.cc  create_obj_tests.cc  iter_tests.cc  memoryLeakDetectorPocTest.cpp  memoryLeakDetectorPocTest.h  template_tests.cc
test/memoryleak_detect/: memoryLeakDetectorBase.cpp  memoryLeakDetectorBase.h
tools/: run-clang-format.py
working/directly_openssl/: CMakeLists.txt  README.md  main.cpp
working/external_openssl/: CMakeLists.txt  README.md  main.cpp
